[tool.poetry]
name = "threana"
version = "0.1.0"
description = "Shell setup tool"
authors = ["Valentin Zemlyakov <me@0010.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
