[tool.poetry]
name = "threana"
version = "0.1.0"
description = "Shell setup tool"
authors = ["Valentin Zemlyakov <me@0010.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mypy = "^0.961"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
